deployments/loki/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-basic-auth
  namespace: loki-stack
spec:
  basicAuth:
    secret: traefik-basic-auth-secret
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-stack
  namespace: loki-stack
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: loki-stack-traefik-basic-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: logging.rimori.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-stack
                port:
                  number: 3100
  tls:
    - hosts:
        - logging.rimori.se
      secretName: loki-gateway-tls
